[package]
name = "wgpu_tests_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.2"
bytemuck = "1.12.3"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
futures-intrusive = "0.5.0"
pollster = "0.2.5"
async-trait = "0.1.60"